app/styles/components/path.less
@import "colors";
@import "fonts";

ul.parameters {
  margin-left: 1em;
}
ul.paths {
  list-style-type: none;
  padding: 0;
}

li.path, ul.parameters li {
  list-style-type: none;
  padding-bottom: 1.2em;
  margin-left: 14px;

  >header {
    position: relative;
    cursor: pointer;

    h2  {
      .sw-font;
      font-family: Source Code Pro;
      display: inline-block;
      font-size: 1.2em;
      padding: 0;
      margin-bottom: 5px;
      margin-top: 3px;

      a {
        color: @gray-dk;
        text-decoration: none;

        &:hover {
          cursor: pointer;
          border-bottom: 1px dotted @silver;

        }
      }
    }
  }

  .jump-to-yaml {
    position: absolute;
    top: 0;
    right: 0;
    padding: 0.3em;
    user-select: none;
    font-size: 0.8em;
    display: inline-block;
    height: 16px;
    width: 22px;
    color: @gray-md;
    background-image: url("../images/jump-icon.svg");
    background-repeat: no-repeat;
    background-position: 0px -3px;
    background-size: 22px;

    &:hover {
      color: @gray-dk;
      transition: all 0.2s ease-in-out;
      cursor: pointer;
      text-decoration: none;
    }

  }

  ul.operations {

    &.collapsed {
      display: none;
    }
  }
}

